kubernetes/apps/app-cluster/monitoring/kube-prometheus-stack/config/alertmanager-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Alert routing and silences"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - monitoring"
    gethomepage.dev/href: "https://alertmanager.krapulax.dev"
    gethomepage.dev/icon: "alertmanager.png"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - alertmanager.krapulax.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          namespace: monitoring
          port: 9093
